# play_with_opengl

./: .gitignore  .gitmodules  README.md  file_in_br_A
basic_01_blank/: CMakeLists.txt  main.cpp
basic_02_shader_cube_control/: CMakeLists.txt  CameraControls.cpp  CameraControls.h  Data.cpp  Data.h  main.cpp  shader.cpp
basic_03_object/: CMakeLists.txt  CameraControls.cpp  main.cpp  objloader.cpp  texture.cpp
basic_04_background/: Background.cpp  CMakeLists.txt  main.cpp  objloader.cpp  shader.cpp  texture.cpp
basic_05_axis/: CMakeLists.txt  camera_control.cpp  camera_control.h  data.cpp  data.h  main.cpp  matrix.h  object_data.cpp  object_data.h  shader.cpp  shader.h  shape.cpp  shape.h  transform.cpp  transform.h  window.cpp  window.h
opencv_01_haar_detection/: Background.h  CMakeLists.txt  CameraControls.cpp  main.cpp  shader.h  texture.cpp
resource/: BackgroundVertexShader.fragmentshader  BackgroundVertexShader.vertexshader  miku_Ver17.02.pmx  nendomiku_ver3_00.pmx
